Refactor query part

--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -109,6 +109,9 @@ function SetOptionsFromURL() {
     }
     document.getElementById("minRunNum").value = par_from_url['minRunNum'];
     document.getElementById("maxRunNum").value = par_from_url['maxRunNum'];
+    if (par_from_url['rcdb_query'] != "") {
+      document.getElementById('rcdb_query').value = par_from_url['rcdb_query'].replace(/%3E/g, ">").replace(/%20/g, " ");
+    }
   }
 }
 
@@ -410,7 +413,6 @@ function PopulateImagesSelector() {
         document.getElementById("Plot").selectedIndex = 0;
       }
       if (par_from_url['rcdb_query'] != "") {
-        document.getElementById('rcdb_query').value = par_from_url['rcdb_query'].replace(/%3E/g, ">").replace(/%20/g, " ");
         DoQuery();  // Sets query_result.
       }
       SetRunListOBJ(true);
