--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Plot Browser by Thomas Britton</title>
+    <title>Plot Browser by Thomas Britton & Keigo M.</title>
   </head>
   <script src="js_utilities/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="js_utilities/jquery-ui.js"></script>
@@ -52,7 +52,7 @@
 
   <body onresize="ShowPlots()">
     <div>
-      Select Run Period: <select id="RunPeriod" name="RunPeriod" onChange="run_range_set_by_user=false;PopulateVersionSelector()"></select>
+      Select Run Period: <select id="RunPeriod" name="RunPeriod" onChange="run_range_set_by_user=false;DoQuery();PopulateVersionSelector()"></select>
       Select Version: <select id="Version" name="Version" onChange="PopulateImagesSelector()"></select><br>
       Plot to Display: <select id="Plot" name="Plot" onChange="SetRunListOBJ();ShowPlots()"></select> Toggle plot order<input type="button" onclick="SelectedRunListOBJ.reverse();ShowPlots()"/>    columns: <select id="Columns" name="Columns" onChange="ShowPlots()"></select><br>
       Run Range: <input type="number" id="minRunNum" name="minRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()"/>-<input type="number" id="maxRunNum" name="maxRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()"/>  Max #plots: <input type="number" id="maxNumOfPlots" name="maxNumOfPlots" min="1" size="20" onChange="SetMaxNumPlots();SetRunListOBJ();ShowPlots()"/><br>
@@ -154,6 +154,8 @@ function PopulateColumnsSelector() {
 }
 
 function DoQuery() {
+  query_result = [];
+  if (document.getElementById('rcdb_query').value == "") return;
   ShowWaitIcon();
   if (window.XMLHttpRequest) {
     // code for IE7+, Firefox, Chrome, Opera, Safari
@@ -250,8 +252,8 @@ function ShowPlots() {
 
     var width_to_use = $(document).width() * .95 / columnstoDisplay;
     var scale_factor = width_to_use / currentwidth;
-    DOM_img.setAttribute("width", currentwidth*scale_factor);
-    DOM_img.setAttribute("height", currentheight*scale_factor);
+    DOM_img.setAttribute("width", currentwidth * scale_factor);
+    DOM_img.setAttribute("height", currentheight * scale_factor);
     var fullpth = "https://halldweb.jlab.org" + imgpth;
 
     DOM_img.onclick = function click() { window.open(this.getAttribute("src"), '_blank'); }
