--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -8,6 +8,9 @@
   <script type="text/javascript" src="js_utilities/datatables.min.js"></script>
   <script src="js_utilities/plotly-latest.min.js"></script>
   <style>
+    body {
+      font-family: sans-serif;
+    }
     #wait_icon {
       visibility: visible;
       width: 25px;
