--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -29,8 +29,8 @@
       columns <select id="Columns" name="Columns" onChange="ShowPlots()"></select><br>
       Run Range: <input type="number" id="minRunNum" name="minRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()"/>-<input type="number" id="maxRunNum" name="maxRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()"/>
       Max #plots <input type="number" id="maxNumOfPlots" name="maxNumOfPlots" min="1" size="20" onChange="SetMaxNumPlots();SetRunListOBJ();ShowPlots()"/><br>
-      Query <input type="text" id="rcdb_query" name="rcdb_query" size="40" />
       <input type="button" value="Query" onclick="DoQuery();SetRunListOBJ();ShowPlots()">
+      <input type="text" id="rcdb_query" name="rcdb_query" size="40" />
       <img id="wait_icon" name="wait_icon" src="./hourglass.png">
       <hr>
       <div style="height: 90%; overflow-y: scroll;">
