--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -17,6 +17,12 @@
       height: 25px;
       display: inline
     }
+    @media screen and (max-width: 1024px) {
+      body {
+        font-family: serif;
+        font-size: 15px;
+      }
+    }
   </style>
 
 
