--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -17,12 +17,6 @@
       height: 25px;
       display: inline
     }
-    @media screen and (max-width: 1024px) {
-      body {
-        font-family: serif;
-        font-size: 15px;
-      }
-    }
   </style>
 
 
@@ -124,11 +118,16 @@ function SetMaxNumPlots() {
 }
 
 function PopulateColumnsSelector() {
+  var default_num = 3;
+  if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('iPad') == -1) || navigator.userAgent.indexOf('iPod') > 0 || navigator.userAgent.indexOf('Android') > 0) {
+    default_num = 1;
+    run_num_limit = 15;
+  }
   for (var i = 1; i <= 10; i++) {
     var newoption   = document.createElement("option");
     newoption.text  = i;
     newoption.value = i;
-    if (i == 3) newoption.selected = true;
+    if (i == default_num) newoption.selected = true;
     document.getElementById("Columns").add(newoption);
   }
 }
