Modify set_run_list_obj.php to accept run ranges arguments

--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -269,7 +269,12 @@ function SetRunListOBJ() {
       }
     }
   }
-  xmlhttp.open("GET", "js_utilities/set_run_list_obj.php?verID=" + document.getElementById("Version").options[document.getElementById("Version").selectedIndex].dbid + "&typeID=" + document.getElementById("Plot").options[document.getElementById("Plot").selectedIndex].dbid + "&runNumLimit=" + run_num_limit, false);
+  var php_string = "js_utilities/set_run_list_obj.php?verID=" + document.getElementById("Version").options[document.getElementById("Version").selectedIndex].dbid + "&typeID=" + document.getElementById("Plot").options[document.getElementById("Plot").selectedIndex].dbid + "&runNumLimit=" + run_num_limit;
+  if (run_range_set_by_user) {
+    php_string += "&minRunNum=" + document.getElementById("minRunNum").value;
+    php_string += "&maxRunNum=" + document.getElementById("maxRunNum").value;
+  }
+  xmlhttp.open("GET", php_string, false);
   xmlhttp.send();
 }
 
