--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -12,7 +12,10 @@
 
     <style>
       body {
-        font-family: sans-serif;
+          line-height: 1.5;
+          padding: 0px;
+          font-family: "DejaVu Sans", Arial, Helvetica, sans-serif;
+          color: #333333;
       }
       #wait_icon {
         visibility: visible;
