--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -21,7 +21,7 @@
           visibility: visible;
           width: 25px;
           height: 25px;
-          display: inline
+          display: inline;
       }
     </style>
   </head>
@@ -46,7 +46,7 @@
       </table>
     </div>
 
-<script>
+<script type="text/javascript">
 
   Array.prototype.max = function() {
     return Math.max.apply(null, this);
