--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -8,23 +8,10 @@
 
     <title>Plot Browser by Thomas Britton & Keigo M.</title>
 
+    <link rel="stylesheet" href="_static/plotbrowser.css" type="text/css" />
+
     <script type="text/javascript" src="js_utilities/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="_static/plotbrowser.js"></script>
-
-    <style>
-      body {
-          line-height: 1.5;
-          padding: 0px;
-          font-family: "DejaVu Sans", Arial, Helvetica, sans-serif;
-          color: #333333;
-      }
-      #wait_icon {
-          visibility: visible;
-          width: 25px;
-          height: 25px;
-          display: inline;
-      }
-    </style>
   </head>
   <body role="document" onresize="ShowPlots()">
     <div>
