--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -16,12 +16,12 @@
   <body role="document" onresize="ShowPlots()">
     <div>
       Run Period <select id="RunPeriod" name="RunPeriod" onChange="run_range_set_by_user=false;DoQuery();PopulateVersionSelector()"></select>
-      Version <select id="Version" name="Version" onChange="PopulateImagesSelector()"></select><br>
+      &#160;&#160;Version <select id="Version" name="Version" onChange="PopulateImagesSelector()"></select><br>
       Plot to Display <select id="Plot" name="Plot" onChange="SetRunListOBJ();ShowPlots()"></select>
-      Toggle plot order <input type="button" onclick="SelectedRunListOBJ.reverse();ShowPlots()"/>
-      columns <select id="Columns" name="Columns" onChange="ShowPlots()"></select><br>
+      &#160;&#160;Toggle plot order <input type="button" onclick="SelectedRunListOBJ.reverse();ShowPlots()"/>
+      &#160;&#160;columns <select id="Columns" name="Columns" onChange="ShowPlots()"></select><br>
       Run Range: <input type="number" id="minRunNum" name="minRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()"/>-<input type="number" id="maxRunNum" name="maxRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()"/>
-      Max #plots <input type="number" id="maxNumOfPlots" name="maxNumOfPlots" min="1" size="20" onChange="SetMaxNumPlots();SetRunListOBJ();ShowPlots()"/><br>
+      &#160;&#160;Max #plots <input type="number" id="maxNumOfPlots" name="maxNumOfPlots" min="1" size="20" onChange="SetMaxNumPlots();SetRunListOBJ();ShowPlots()"/><br>
       <input type="button" value="Query" onclick="DoQuery();SetRunListOBJ();ShowPlots()">
       <input type="text" id="rcdb_query" name="rcdb_query" size="40" />
       <img id="wait_icon" name="wait_icon" src="./hourglass.png">
