--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -18,12 +18,12 @@
       Run Period <select id="RunPeriod" name="RunPeriod" onChange="run_range_set_by_user=false;DoQuery();PopulateVersionSelector()"></select>
       &#160;&#160;Version <select id="Version" name="Version" onChange="PopulateImagesSelector()"></select><br>
       Plot to Display <select id="Plot" name="Plot" onChange="SetRunListOBJ();ShowPlots()"></select>
-      &#160;&#160;Toggle plot order <input type="button" onclick="SelectedRunListOBJ.reverse();ShowPlots()"/>
+      &#160;&#160;Toggle plot order <input type="button" onclick="SelectedRunListOBJ.reverse();ShowPlots()" />
       &#160;&#160;columns <select id="Columns" name="Columns" onChange="ShowPlots()"></select><br>
-      Run Range: <input type="number" id="minRunNum" name="minRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()"/>-<input type="number" id="maxRunNum" name="maxRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()"/>
+      Run Range: <input type="number" id="minRunNum" name="minRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()" />-<input type="number" id="maxRunNum" name="maxRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()" />
       &#160;&#160;Max #plots <input type="number" id="maxNumOfPlots" name="maxNumOfPlots" min="1" size="20" onChange="SetMaxNumPlots();SetRunListOBJ();ShowPlots()"/><br>
-      <input type="button" value="Query" onclick="DoQuery();SetRunListOBJ();ShowPlots()">
       <input type="text" id="rcdb_query" name="rcdb_query" size="40" />
+      <input type="button" value="query" onclick="DoQuery();SetRunListOBJ();ShowPlots()" />
       <img id="wait_icon" name="wait_icon" src="./hourglass.png">
       <hr>
       <div style="height: 90%; overflow-y: scroll;">
