--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -24,6 +24,7 @@
       &#160;&#160;Max #plots <input type="number" id="maxNumOfPlots" name="maxNumOfPlots" min="1" size="20" onChange="SetMaxNumPlots();SetRunListOBJ();ShowPlots()"/><br>
       <input type="text" id="rcdb_query" name="rcdb_query" size="40" />
       <input type="button" value="query" onclick="DoQuery();SetRunListOBJ();ShowPlots()" />
+      <br><a href="https://halldweb.jlab.org/data_monitoring/HowToGetALink.html">How to get a link</a>
       <img id="wait_icon" name="wait_icon" src="./hourglass.png">
       <hr>
 
