--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -15,6 +15,7 @@
   </head>
   <body role="document" onresize="ShowPlots()">
     <div>
+      <p style="text-align: right"><input type="text" id="user_link" name="user_link" size="150" readonly/></p>
       Run Period <select id="RunPeriod" name="RunPeriod" onChange="run_range_set_by_user=false;DoQuery();PopulateVersionSelector()"></select>
       &#160;&#160;Version <select id="Version" name="Version" onChange="PopulateImagesSelector()"></select><input type="text" id="ShowRunRangeID" name="ShowRunRangeName" readonly/><br>
       Plot to Display <select id="Plot" name="Plot" onChange="SetRunListOBJ();ShowPlots()"></select>
@@ -24,7 +25,6 @@
       &#160;&#160;Max #plots <input type="number" id="maxNumOfPlots" name="maxNumOfPlots" min="1" size="20" onChange="SetMaxNumPlots();SetRunListOBJ();ShowPlots()"/><br>
       <input type="text" id="rcdb_query" name="rcdb_query" size="40" />
       <input type="button" value="query" onclick="DoQuery();SetRunListOBJ();ShowPlots()" />
-      <br><a href="https://halldweb.jlab.org/data_monitoring/HowToGetALink.html">How to get a link</a>
       <img id="wait_icon" name="wait_icon" src="./hourglass.png">
       <hr>
 
