--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="_static/plotbrowser.css" type="text/css" />
 
     <script type="text/javascript" src="js_utilities/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="_static/plotbrowser2.js"></script>
+    <script type="text/javascript" src="_static/plotbrowser.js"></script>
   </head>
   <body role="document" onresize="ShowPlots()">
     <div>
@@ -19,7 +19,7 @@
       Run Period <select id="RunPeriod" name="RunPeriod" onChange="run_range_set_by_user=false;DoQuery();PopulateVersionSelector()"></select>
       &#160;&#160;Version <select id="Version" name="Version" onChange="PopulateImagesSelector()"></select><input type="text" id="ShowRunRangeID" name="ShowRunRangeName" readonly/><br>
       Plot to Display <select id="Plot" name="Plot" onChange="SetRunListOBJ();ShowPlots()"></select>
-      &#160;&#160;Toggle plot order <input type="button" onclick="TogglePlotOrder()" />
+      &#160;&#160;Toggle plot order <input type="button" onclick="SelectedRunListOBJ.reverse();ShowPlots()" />
       &#160;&#160;columns <select id="Columns" name="Columns" onChange="ShowPlots()"></select><br>
       Run Range: <input type="number" id="minRunNum" name="minRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()" />-<input type="number" id="maxRunNum" name="maxRunNum" size="20" onChange="run_range_set_by_user=true;SetRunListOBJ();ShowPlots()" />
       &#160;&#160;Max #plots <input type="number" id="maxNumOfPlots" name="maxNumOfPlots" min="1" size="20" onChange="SetMaxNumPlots();SetRunListOBJ();ShowPlots()"/><br>
