--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="_static/plotbrowser.css" type="text/css" />
 
     <script type="text/javascript" src="js_utilities/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="_static/plotbrowser2.js"></script>
+    <script type="text/javascript" src="_static/plotbrowser.js"></script>
   </head>
   <body role="document" onresize="ShowPlots()">
     <div>
